<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NotifAI</string>
    <string name="permissions">Permissions</string>
    <string name="title_user_agreement">User Agreement</string>
    <string name="user_agreement">
    <![CDATA[
        <h3>1. Data Collection and Privacy</h3>
        <br>
        <p><b>NotifAI</b> operates entirely offline and does not collect or store any personal data unless explicitly permitted by the user.</p>
        <p>The app does not share or transmit any SMS messages, contacts, or other sensitive information to external servers without user consent.</p>
        <p>We may collect anonymous analytics data, such as app crashes and feature usage trends, to enhance performance and stability. This data does not track individual user behavior or contain personally identifiable information.</p>
        <br>
        <br>
        <h3>2. User Control and Consent</h3>
        <br>
        <p>The user has full control over their data and can disable data sharing at any time in the app settings.</p>
        <p>If data sharing is disabled, all stored data on our servers (if any) related to the user will be deleted upon request. Users can request data deletion by contacting us at <br><b>mehershubham.work@gmail.com</b>, and we will process the request within 5 days.</p>
        <br>
        <br>
        <h3>3. Security Measures</h3>
        <br>
        <p>All data transmissions (if enabled) are encrypted to protect user privacy.</p>
        <p>We implement industry-standard security measures, including encryption and access controls, to ensure that user data remains protected from unauthorized access.</p>
        <br>
        <br>
        <h3>4. Changes to This Agreement</h3>
        <br>
        <p>We may update this User Agreement from time to time. Users will be notified of any significant changes via in-app notifications.</p>
        <p>Continued use of the app after changes take effect constitutes agreement to the revised terms.</p>
        <br>
        <br>
        <h3>5. Contact Information</h3>
        <br>
        <p>If you have any questions about this agreement or how your data is handled, please contact us at <br><b>mehershubham.work@gmail.com</b>.</p>
        <br>
        <br>
        <p>By using <b>NotifAI</b>, you confirm that you have read and understood this User Agreement, and you agree to its terms and conditions.</p>
        <br>
        <br>
        <br>
        <br>
    ]]>
</string>
    <string name="proceed">Proceed</string>
    <string name="agree_to_use">Agree to Use</string>
    <string name="optional_agreement_title">Help Improve NotifAI😀</string>
    <string name="optional_agreement_description">We collect anonymous SMS metadata to improve performance. This data is never sold or shared.</string>
    <string name="enable_sharing">Enable Sharing</string>
    <string name="not_now">Not Now</string>
    <string name="grant_permissions">Grant Permissions</string>
    <string name="processing_messages">Processing Messages</string>
    <string name="processing_messages_">Processing messages…</string>
    <string name="processing_complete">Processing complete!</string>
    <string name="processing_error">Error: %1$s</string>
    <string name="progress_percentage">%1$d%% done…</string>
    <string name="start_processing">Start Processing</string>
    <string name="stop_processing">Stop Processing</string>
    <string name="loading">Loading…</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="important">Important</string>
    <string name="others">Others</string>
    <string name="retry">Retry</string>
    <string name="messages">Messages</string>
    <string name="enter_message">Enter message</string>
    <string name="send">send</string>
    <string name="continue_in_background">Continue in background</string>
    <string name="back">Back</string>
    <string name="view_contacts">View Contacts</string>
    <string name="search_here">Search here</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="once_deleted_messages_can_t_be_restored">Once deleted messages can\'t be restored</string>
    <string name="syncing">Syncing</string>
    <string name="settings">Settings</string>
    <string name="block_list">Block List</string>
    <string name="customize_categories">Customize Sms Categories</string>
    <string name="block">Block</string>
    <string name="blocked_sender_message">
    Once blocked, you\'ll still receive messages from the sender, but: \n
    - You won\'t get notified.\n
    - Messages won’t appear in your inbox.\n
    - You can unblock it from the Blocked List.\n
</string>
    <string name="blocked_list">Blocked List</string>
    <string name="unblock_sender">Unblock Sender?</string>
    <string name="are_you_sure_you_want_to_unblock_this_sender_you_ll_start_receiving_notifications_and_messages_will_appear_in_your_inbox_again">Are you sure you want to unblock this sender?\nYou’ll start receiving notifications and messages will appear in your inbox again.</string>
    <string name="manage_important_sms_classification">Manage Sms Classification importance</string>
    <string name="choose_which_types_of_sms_should_appear_in_the_important_or_other_tabs">Choose which types of SMS should appear in the Important or Other tabs.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="store_messages_in_system_sms_inbox">Store messages in system SMS inbox</string>
    <string name="when_enabled_messages_will_also_be_saved_to_android_s_sms_storage_when_disabled_messages_remain_private_within_notifai">When enabled, messages will also be saved to Android\'s SMS storage. When disabled, messages remain private within NotifAI.</string>
</resources>