<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Header -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_fragNewContactList_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:elevation="@dimen/spacing_small"
            android:paddingHorizontal="@dimen/spacing_small"
            android:paddingVertical="@dimen/spacing_x_small"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_fragSettings_back"
                android:layout_width="@dimen/spacing_x_large"
                android:layout_height="@dimen/spacing_x_large"
                android:background="@drawable/ripple_color_grey_oval"
                android:contentDescription="@string/back"
                android:padding="@dimen/spacing_x_small"
                android:src="@drawable/ic_back_24x24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/header_title"
                style="@style/text_header_bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_x_medium"
                android:text="@string/settings"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_fragSettings_back"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_small"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_fragNewContactList_header">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_fragSettings_itemBlockList"
                    style="@style/text_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_shape_rect_color_light_radius_x_medium"
                    android:drawableEnd="@drawable/ic_arrow_back_24x24"
                    android:drawableTint="@color/white"
                    android:padding="@dimen/spacing_small"
                    android:text="@string/block_list"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_fragSettings_itemSmsCategories"
                    style="@style/text_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:background="@drawable/ripple_shape_rect_color_light_radius_x_medium"
                    android:drawableEnd="@drawable/ic_arrow_back_24x24"
                    android:drawableTint="@color/white"
                    android:padding="@dimen/spacing_small"
                    android:text="@string/customize_categories"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_fragSettings_itemBlockList" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ll_fragSettings_itemStoreInAndroidSystem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:padding="@dimen/spacing_small"
                    app:layout_constraintTop_toBottomOf="@+id/tv_fragSettings_itemSmsCategories">

                    <!-- Title -->
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_fragSettings_title_storeInSystem"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/store_messages_in_system_sms_inbox"
                        android:textColor="?label"
                        android:textSize="16sp"
                        style="@style/text_body_bold"
                        app:layout_constraintBottom_toTopOf="@+id/tv_fragSettings_desc_storeInSystem"
                        app:layout_constraintEnd_toStartOf="@id/switch_fragSettings_storeInSystem"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_goneMarginBottom="@dimen/spacing_small" />

                    <!-- Description -->
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_fragSettings_desc_storeInSystem"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        style="@style/text_body"
                        android:text="@string/when_enabled_messages_will_also_be_saved_to_android_s_sms_storage_when_disabled_messages_remain_private_within_notifai"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/switch_fragSettings_storeInSystem"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_fragSettings_title_storeInSystem" />

                    <!-- Switch -->
                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_fragSettings_storeInSystem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_small"
                        app:layout_constraintBottom_toBottomOf="@id/tv_fragSettings_title_storeInSystem"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tv_fragSettings_title_storeInSystem" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_fragSettings_itemPrivacy"
                    style="@style/text_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:background="@drawable/ripple_shape_rect_color_light_radius_x_medium"
                    android:drawableEnd="@drawable/ic_arrow_back_24x24"
                    android:drawableTint="@color/white"
                    android:padding="@dimen/spacing_small"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/ll_fragSettings_itemStoreInAndroidSystem" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>