<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.summer.notifai.ui.home.HomeViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Collapsing AppBar -->
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="?colorSurface"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:titleEnabled="false">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="pin">

                    <!-- Header -->
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/header_title"
                        style="@style/text_header_bold"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/spacing_x_medium"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:text="@string/messages"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_fragContactList_search"
                        app:layout_constraintEnd_toStartOf="@+id/iv_fragContactList_search"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <!-- Search Icon -->
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_fragContactList_search"
                        android:layout_width="@dimen/spacing_x_large"
                        android:layout_height="@dimen/spacing_x_large"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:layout_marginEnd="@dimen/spacing_x_medium"
                        android:background="@drawable/ripple_color_grey_oval"
                        android:padding="@dimen/spacing_x_small"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_search_24x24" />

                    <!-- ChipGroup -->
                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/cg_fragContactList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_small"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/iv_fragContactList_search"
                        app:selectFirstChip="@={viewModel.isImportant}"
                        app:selectionRequired="true"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipImportant"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/important"
                            android:textColor="@drawable/chip_text_color_selector"
                            app:chipBackgroundColor="@drawable/chip_background_selector" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipOthers"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/others"
                            android:textColor="@drawable/chip_text_color_selector"
                            app:chipBackgroundColor="@drawable/chip_background_selector" />
                    </com.google.android.material.chip.ChipGroup>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_fragSmsContactList_viewContacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:contentDescription="@string/view_contacts"
            android:src="@drawable/ic_chat_add_24x24"
            app:backgroundTint="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_fragContactList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/item_sms_contact" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>